<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">STUDIO SHOW</string>
    <string name="delete_post">Delete post</string>
    <string name="edit_post">Edit post</string>
    <string name="des_image">TODO</string>
    <string name="i_forgot_pass">I forgot my password</string>
    <string name="email_hint">Enter your Email</string>
    <string name="pass_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_login_google">\t Login with google</string>
    <string name="text_sign_up">No Account ? signup</string>
    <string name="set_date">set date</string>
    <string name="Send_Reservation_Request">Send Reservation Request</string>
    <string name="Delete_reservation_request">Delete reservation request</string>
    <string name="my_posts">my posts</string>
    <string name="description_post">write anything</string>
    <string name="post">post</string>
    <string name="Reservation_titl">Reservations</string>
    <string name="Reservation_request_titl">Reservation requests</string>
    <string name="title_retereve_pass">write your Email address and notify from your messages</string>
    <string name="hint_edit_ret_pass">write your Email address here</string>
    <string name="send_to_my_Email">send to my Email</string>
    <string name="change_settings">change settings</string>
    <string name="hint_name">user name</string>
    <string name="hint_status">write your status</string>
    <string name="hint_country">country</string>
    <string name="gender">gender</string>
    <string name="title_settings">change settings</string>
    <string name="phone">phone number</string>
    <string name="save_changes">save changes</string>
    <string name="Register">Register</string>
    <string name="update_in">update in</string>
    <string name="ok">OK</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_in">sign in</string>
    <string name="i_accept_all_condition">I accept all condition</string>
    <string name="Delete_account">Are you sure you want to delete account ?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="please_enter_you_Email">please enter your Email</string>
    <string name="please_enter_your_pass">please enter your password</string>
    <string name="please_confirm_your_pass">please confirm your password</string>
    <string name="pass_not_equals">the password do not match please write again</string>
    <string name="done_regist">registration is Done..</string>
    <string name="email_registed">this Email already existing..</string>
    <string name="select_type_account">Select type account</string>
    <string name="user">user</string>
    <string name="photographer_or_studio">Photographer or studio</string>
    <string name="login_the_account">Now will done login the account </string>
    <string name="make_sure">"make sure the email or password is corrected</string>
    <string name="address">address</string>
    <string name="select_type_search">Select type search</string>
    <string name="Photographer_specific">this the account Photographer-specific</string>
    <string name="user_specific">this the account User-specific</string>
    <string name="Profile_and">Profile and</string>
    <string name="Select_option">Select option</string>
    <string name="Accept_request">Accept reservation request</string>
    <string name="cancel_reservation">Cancel reservation request</string>
    <string name="registering_your_information">registering your information</string>
    <string name="Adding_New_Post">Add New Post</string>
    <string name="image_uploaded_successfully">image uploaded successfully</string>
    <string name="post_uploaded_successfully">post uploaded successfully</string>
    <string name="myProfile">my Profile</string>
    <string name="new_post">New Post</string>
    <string name="settings">Settings</string>
    <string name="Delete_account_menu">Delete Account</string>
    <string name="logout">logout</string>
    <string name="home">home</string>
    <string name="s_profile">\t profile</string>
    <string name="Friend_request_option">Friend request option</string>
    <string name="send_viryfy">we send you message to your Email address check your Email please</string>
    <string name="all_advertising">all advertising</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="deleted_Successfully">deleted Successfully....</string>
    <string name="studio_app_running">studio app running</string>
    <string name="Searching">Searching</string>
    <string name="not_found">not found</string>
    <string name="request_canceled">reservation request canceled !</string>
    <string name="request_accepted">reservation request accepted</string>
    <string name="photo_not_exists">profile image and name not exists</string>
    <string name="check_request">check reservation request</string>
    <string name="Error_occurred_updating_post">Error occurred while updating_post</string>
    <string name="Book_time">Book time \n</string>
    <string name="changing_photo">changing the photo</string>
    <string name="Error">Error</string>
    <string name="update_successfully">"update is successfully"</string>
    <string name="schedule">studio schedule</string>
    <string name="schedule_time">Enter the schedule address </string>
    <string name="schedule_time_des">Enter description schedule</string>
    <string name="level_of_evaluation">level of evaluation</string>
    <string name="set_evaluation">set_evaluation</string>
    <string name="tims">time is not available</string>
    <string name="admin">admin</string>
</resources>
