<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">

    <item
        android:id="@+id/new_post"
        android:title="@string/new_post"
        android:icon="@drawable/add_post"
        />


    <item
        android:id="@+id/nav_profile"
        android:title="@string/myProfile"
        android:icon="@drawable/profile_icon"
    />
    <item
        android:id="@+id/nav_Reservations_request"
        android:title="@string/Reservation_request_titl"
        android:icon="@drawable/profile_icon"
        />
    <item
        android:id="@+id/nav_Reservations"
        android:title="@string/Reservation_titl"
        android:icon="@drawable/booked"
        />
    <item
        android:title="@string/schedule"
        android:id="@+id/nav_schedule"
        android:icon="@drawable/calendar"
        />
    <item
        android:id="@+id/nav_setting"
        android:title="@string/settings"
        android:icon="@drawable/settings"/>
    <item android:id="@+id/nav_delete"
        android:title="@string/Delete_account_menu"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        />
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/logout"/>
</group>

</menu>