<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:background="@drawable/background_layout_new">
    <include android:id="@+id/settingtoolbar"
        layout="@layout/app_bar_layout"
        >

    </include>

    <TextView
        android:id="@+id/formLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="cursive"
        android:text="@string/change_settings"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:targetApi="jelly_bean" />



    <ScrollView
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:background="@drawable/background_layout_new"

            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginBottom="30dp"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@drawable/backgroundprof"
                android:id="@+id/image_profile_setting"/>
            <EditText
                android:id="@+id/status_setting"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_status"
                android:textColorHint="#000000"
                android:textAlignment="center"
                android:textColor="#000"
                android:inputType="text"
                tools:ignore="Autofill" />

            <EditText
                android:textColorHint="#000000"
                android:id="@+id/user_name_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_name"
                android:textColor="#000000"
                android:inputType="text"
                tools:ignore="Autofill" />

            <EditText
                android:textColorHint="#000000"
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/phone"
                android:textColor="#000"
                android:inputType="phone"
                tools:ignore="Autofill" />

            <EditText
                android:textColorHint="#000000"
                android:id="@+id/country_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_country"
                android:textColor="#000" />



            <EditText
                android:textColorHint="#cabfbf"
                android:id="@+id/gender_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/gender"
                android:textColor="#000"
                android:inputType="text"
                tools:ignore="Autofill" />


            <Button
                android:id="@+id/save_change_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_layout_new_button"
                android:text="@string/save_changes"
                android:textColor="#fff"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>