<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_layout_new"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        tools:ignore="UselessParent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/des_image" />

    <LinearLayout
        android:layout_below="@+id/imageView"
        android:layout_width="350dp"
        android:background="@drawable/background_relative"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:fontFamily="cursive"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="80sp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:id="@+id/text_e"
            tools:targetApi="jelly_bean" />
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email_hint"
            android:textColorHint="#ffff"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textAlignment="center"

            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/email"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:id="@+id/Email"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/email"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            tools:ignore="RtlSymmetry" />
        <AutoCompleteTextView
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/pass_hint"
            android:textColorHint="#ffff"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/lock"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:drawableStart="@drawable/lock"
            android:paddingStart="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
        <AutoCompleteTextView
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/confirm_password"
            android:textColorHint="#ffff"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/lock"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:paddingStart="10dp"
            android:inputType="textPassword"
            android:id="@+id/confirmPassword"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:drawableStart="@drawable/lock"
            tools:ignore="RtlSymmetry" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/sign_in"
            android:id="@+id/createaccount"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:textColor="#fff"
            android:paddingRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/background_button"
            />

    </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="77dp"
            android:layout_height="68dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:visibility="invisible" />
    </RelativeLayout>
</RelativeLayout>