<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetpasswordActivity"
    android:background="@drawable/background_layout_new"
    >
<include layout="@layout/app_bar_layout"
    android:id="@+id/toolbarreset"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:textAlignment="center"
        android:text="@string/title_retereve_pass"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="162dp"
        android:background="@drawable/background_relative"
        android:hint="@string/hint_edit_ret_pass"
        android:textColor="#000"
        android:textColorHint="#fff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/Email_input_text"
        android:layout_alignParentRight="true"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/sendToEmail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:background="@drawable/background_layout_new_button"
        android:text="@string/send_to_my_Email"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>