<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginStart="5dp">
<LinearLayout
    android:layout_marginTop="5dp"
    android:layout_margin="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/postprofileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/lock"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/hint_name"
                android:id="@+id/postfullname"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#5e5d5d"
                    android:text="@string/update_in"
                    android:textSize="13sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textdatepost"
                    android:textColor="#000"
                    android:text="@string/post"
                    android:textSize="13sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTimepost"
                    android:textColor="#000"
                    android:text="@string/post"
                    android:textSize="13sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_post"
        android:textSize="14sp"
        android:textColor="#000"
        android:id="@+id/textdescriptionpost"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autoLink="all"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/postImage"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/des_image" />



</LinearLayout>

</android.support.v7.widget.CardView>