<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity"
    android:background="@drawable/background_layout_new"


    >



    <RelativeLayout

        android:layout_width="315dp"
        android:layout_height="451dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_relative">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="cursive"
            android:text="@string/btn_login"
            android:textColor="#ffffff"
            android:textSize="60sp"
            android:textStyle="bold"
            tools:targetApi="jelly_bean" />

        <EditText

            android:id="@+id/edt_email"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:drawableLeft="@drawable/email"
            android:hint="@string/email_hint"
            android:paddingLeft="5dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textColorHint="#d1c8c8"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingStart="5dp"
            tools:ignore="Autofill,RtlSymmetry"
            android:drawableStart="@drawable/email"
            android:inputType="textEmailAddress"
             />

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_below="@+id/edt_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textColorHint="#d1c8c8"
            android:textSize="17sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/lock"
            android:paddingStart="5dp"
            tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/edit_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_pass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/i_forgot_pass"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textColorHint="#d1c8c8"
            android:textSize="17sp"
            android:selectAllOnFocus="false"
            android:linksClickable="false"
            android:autoLink="all"
            android:textStyle="bold" />

        <Spinner

            android:layout_marginTop="10dp"
            android:id="@+id/type_login"
            android:layout_width="255dp"
            android:layout_height="40dp"
            android:layout_below="@+id/edit_reset"
            android:layout_centerHorizontal="true"
            android:outlineAmbientShadowColor="#fff"
            android:outlineSpotShadowColor="#fff"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
            app:subtitleTextColor="#fff"
            app:titleTextColor="#fff">

        </Spinner>

        <Button
            android:id="@+id/btn_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/type_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button"
            android:text="@string/btn_login"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/google_sign_in"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_con"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button"
            android:drawableLeft="@drawable/google_login"
            android:fontFamily="serif"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:text="@string/btn_login_google"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat,RtlHardcoded,RtlSymmetry"
            android:drawableStart="@drawable/google_login"
            tools:targetApi="jelly_bean"
            android:paddingStart="50dp" />

    </RelativeLayout>



    <TextView
        android:id="@+id/text_link2"
        android:layout_width="350dp"
        android:layout_height="37dp"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="4dp"
        android:text="@string/text_sign_up"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/man"
        android:contentDescription="@string/des_image" />
</RelativeLayout>